# autogen-agents

./: .gitignore  docker-compose.yml
autogen/: Dockerfile  main.py  pyproject.toml
jupyter/: Dockerfile  pyproject.toml
jupyter/notebooks/: autogen_getting_started.ipynb
