[tool.poetry]
name = "autogen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
autogen-ext = {extras = ["magentic-one", "openai"], version = "^0.4.3"}
litellm = {extras = ["proxy"], version = "^1.59.8"}
autogen-agentchat = "^0.4.3"
jupyterlab = "^4.3.4"
pandas = "^2.2.3"
langchain-experimental = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
