[tool.poetry]
name = "autogen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
autogen-ext = {extras = ["web-surfer"], version = "^0.4.4"}
litellm = {extras = ["proxy"], version = "^1.59.8"}
autogen-agentchat = "^0.4.3"
jupyterlab = "^4.3.4"
pandas = "^2.2.3"
langchain-experimental = "^0.3.4"
aiofiles = "^24.1.0"
selenium = "^4.28.1"
langchain-community = "^0.3.16"
unstructured = "^0.16.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
